experimental/ir/testdata/options/validate/java_utf8.proto.stderr.txt
error: cannot set `java_string_check_utf8` in editions mode
  --> testdata/options/validate/java_utf8.proto:5:8
   |
 5 | option java_string_check_utf8 = true;
   |        ^^^^^^^^^^^^^^^^^^^^^^
  help: replace with `features.(pb.java).utf8_validation`
   |
 5 | - option java_string_check_utf8 = true;
 5 | + option features.(pb.java).utf8_validation = VERIFY;

encountered 1 error
